refactor: rebuild JaWa architecture based on whatsmeow (Go)